# meTooExtraction

./: .gitignore  japan  main.py  pyproject.toml  translate.py
extraction/: clean.py  explore.py  plot.py  search.py  search_tweets.py  search_users.py  translate.py
info/: project description
info/analysis/: bots_content.json  hashtags-17-12-21.txt  hashtags-19-12-21.txt  keywords.json  lexical_fields.json  spacy_categories  variables_dictionary.json
info/search/: prompts.json  queries.json  user_ids.txt
infos/: TODO  example  progression log
infos/analysis/: bots_content.json  id_filter.json  ja_stopwords.txt  keywords.json
llm-annotation/: TODO.txt  annotate_anthropic.py  annotate_mistral.py  annotate_openai.py  annotate_opencalm.py  annotate_rinnagpt.py  annotate_tinyllama.py  llm_utils.py  merge_dataframes.py  mistral_api.py  translate_deepl.py
research/: annotate.py  clustering.py  explore.py  linguistic.py  nlp.py  plots.py  stats.py  stopwords.py
utils/: converters.py  df_transform.py  file_utils.py  format.py  plots.py  stats.py  tweet_utils.py
